Added custom cell.

--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -128,6 +128,42 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="391-bx-vqB">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" id="E0L-3N-KeQ" customClass="CustomTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E0L-3N-KeQ" id="ub3-VP-Nbg">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R9i-9i-Z4c">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDg-AC-k1c">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="MDg-AC-k1c" secondAttribute="trailing" id="0Gh-qO-GBV"/>
+                                                <constraint firstItem="MDg-AC-k1c" firstAttribute="leading" secondItem="ub3-VP-Nbg" secondAttribute="leading" id="9z9-Ef-Pgf"/>
+                                                <constraint firstItem="MDg-AC-k1c" firstAttribute="top" secondItem="ub3-VP-Nbg" secondAttribute="top" id="icx-Ie-Jas"/>
+                                                <constraint firstAttribute="trailing" secondItem="R9i-9i-Z4c" secondAttribute="trailing" id="jrT-ne-9kZ"/>
+                                                <constraint firstAttribute="bottom" secondItem="MDg-AC-k1c" secondAttribute="bottom" id="k6t-vE-1Yc"/>
+                                                <constraint firstAttribute="bottom" secondItem="R9i-9i-Z4c" secondAttribute="bottom" id="ofa-2h-env"/>
+                                                <constraint firstItem="R9i-9i-Z4c" firstAttribute="top" secondItem="ub3-VP-Nbg" secondAttribute="top" id="ogd-LL-eTi"/>
+                                                <constraint firstItem="R9i-9i-Z4c" firstAttribute="leading" secondItem="ub3-VP-Nbg" secondAttribute="leading" id="vM7-dP-E9m"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="image" destination="R9i-9i-Z4c" id="zPb-XO-toR"/>
+                                            <outlet property="titleLabel" destination="MDg-AC-k1c" id="PJs-hR-SVT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="nXI-KY-MPC" id="7hV-XI-WTn"/>
                                     <outlet property="delegate" destination="nXI-KY-MPC" id="Ueo-Ss-bPJ"/>
