--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -141,7 +141,7 @@
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDg-AC-k1c">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.19506492077464788" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -185,6 +185,84 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YPv-Mh-oKW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1225" y="72"/>
+        </scene>
+        <!--Photo View Controller-->
+        <scene sceneID="vfl-4t-Lf4">
+            <objects>
+                <viewController storyboardIdentifier="PhotoViewController" id="xcu-j7-epq" customClass="PhotoViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JHG-Ow-0Ng"/>
+                        <viewControllerLayoutGuide type="bottom" id="yh3-ce-rhx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="m0N-v6-OnI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rSL-lM-WiV">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NYg-Xl-Auc">
+                                    <size key="itemSize" width="154" height="129"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomCollectionViewCell" id="CcT-NL-VWU" customClass="CustomCollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="154" height="129"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="154" height="129"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lIY-0C-cs9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="154" height="129"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmM-Gy-gQy">
+                                                    <rect key="frame" x="0.0" y="98" width="154" height="21"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.19561509683098591" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="QmM-Gy-gQy" secondAttribute="bottom" constant="10" id="2Vq-88-evf"/>
+                                            <constraint firstItem="QmM-Gy-gQy" firstAttribute="leading" secondItem="CcT-NL-VWU" secondAttribute="leading" id="3jw-yk-tGi"/>
+                                            <constraint firstItem="lIY-0C-cs9" firstAttribute="leading" secondItem="CcT-NL-VWU" secondAttribute="leading" id="E6o-BB-ODV"/>
+                                            <constraint firstItem="lIY-0C-cs9" firstAttribute="top" secondItem="CcT-NL-VWU" secondAttribute="top" id="IXx-CN-Bzp"/>
+                                            <constraint firstAttribute="bottom" secondItem="lIY-0C-cs9" secondAttribute="bottom" id="K6i-4F-3XC"/>
+                                            <constraint firstAttribute="trailing" secondItem="lIY-0C-cs9" secondAttribute="trailing" id="ilA-Gc-iK8"/>
+                                            <constraint firstAttribute="trailing" secondItem="QmM-Gy-gQy" secondAttribute="trailing" id="uGq-76-e2g"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="image" destination="lIY-0C-cs9" id="N8q-Tk-fel"/>
+                                            <outlet property="titleLabel" destination="QmM-Gy-gQy" id="d5p-bS-DUE"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="xcu-j7-epq" id="WMH-WP-y9e"/>
+                                    <outlet property="delegate" destination="xcu-j7-epq" id="zEv-Ag-Ibj"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yh3-ce-rhx" firstAttribute="top" secondItem="rSL-lM-WiV" secondAttribute="bottom" id="Gsg-Bf-fn1"/>
+                            <constraint firstItem="rSL-lM-WiV" firstAttribute="leading" secondItem="m0N-v6-OnI" secondAttribute="leading" id="Y9d-4d-c23"/>
+                            <constraint firstItem="rSL-lM-WiV" firstAttribute="top" secondItem="JHG-Ow-0Ng" secondAttribute="bottom" id="nkN-v9-aMf"/>
+                            <constraint firstAttribute="trailing" secondItem="rSL-lM-WiV" secondAttribute="trailing" id="v3z-7X-fA3"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="colectionView" destination="rSL-lM-WiV" id="no4-Uv-i8t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1cr-n3-BgX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2069.5999999999999" y="59.820089955022496"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
